<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cinequiz_logo"
        tools:layout_editor_absoluteX="45dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLoginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/E_mail"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="Senha"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginField"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvLoginPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#535050"
        android:onClick="login"
        android:text="@string/Log_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passField" />

    <Button
        android:id="@+id/tvEsqueciSenha"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:onClick="forgetPass"
        android:text="@string/Esqueceu_a_senha"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/tvNovo"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="newUser"
        android:text="@string/novo_por_aqui_inscreva_se_agora"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEsqueciSenha" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNovo">

        <View
            android:id="@+id/vwLinha"
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="#7CFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/ou"

            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/facebook_blue"
            android:text="@string/Login_com_facebook"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="10dp" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/google_red"
            android:onClick="sigIn"
            android:text="@string/Login_com_google"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>

