<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rec_matches_items_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:id="@+id/rec_matches_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2AD631"
            android:orientation="vertical"
            android:padding="2dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rec_matches_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/won"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/rec_matches_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:padding="8dp"
                        android:text="@string/matches_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/rec_matches_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        app:srcCompat="@drawable/ic_thumb_up"
                        app:tint="@color/white"
                        android:contentDescription="@string/icon_thumb_up"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>